<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.lexnarro.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_35"
            android:text="Welcome to"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dp_35" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/header_logo"/>

        <EditText
            android:id="@+id/edt_username"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_35"
            android:drawableStart="@drawable/user_l"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/edt_password"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password_l"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/f_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/dp_20"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            android:textStyle="italic" />

        <Button
            android:id="@+id/login"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/login" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_10"
        android:padding="@dimen/dp_20"
        android:text="Dont have an account? SignUp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />
</RelativeLayout>
