<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/record_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"
        android:elevation="@dimen/dp_10"
        android:translationZ="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_.5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/dp_5"
                    android:shadowColor="#95000000"
                    android:shadowDx="5"
                    android:shadowDy="7"
                    android:shadowRadius="10"
                    android:text="@string/plan"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/txt_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    android:padding="@dimen/dp_5"
                    android:shadowColor="#95000000"
                    android:shadowDx="5"
                    android:shadowDy="7"
                    android:shadowRadius="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_.5"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/colorPrimary"
                    android:padding="@dimen/dp_5"
                    android:shadowColor="#95000000"
                    android:shadowDx="5"
                    android:shadowDy="7"
                    android:shadowRadius="10"
                    android:text="@string/amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/txt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/black"
                    android:padding="@dimen/dp_5"
                    android:shadowColor="#95000000"
                    android:shadowDx="5"
                    android:shadowDy="7"
                    android:shadowRadius="10"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_.5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:orientation="horizontal"
                android:padding="@dimen/dp_.5">


                <TextView
                    android:id="@+id/txt_subscribe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_.5"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:shadowColor="#95000000"
                    android:shadowDx="5"
                    android:shadowDy="7"
                    android:shadowRadius="10"
                    android:text="@string/subscribe_now"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_18" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>